	that inherits Player.
	* GameCharacter and ShopCharacter inherit LoggedInPlayer instead of just
	implementing it. LoginCharacter inherits the new Player class. Renamed
	instance variables in Player to be consistent with duplicate variables from
	GameCharacter and they now have protected access. Removed these duplicate
	variables from GameCharacter, as well as duplicate accessor and mutator
	methods.

2012-04-22  GoldenKevin  (revision 82)

	* Every party member in the same channel shares a single PartyList instance.
	This should reduce RAM usage and bandwidth between the center server and the
	game servers, but increases complexity somewhat and may raise a few gotchas
	revolving around sharing an instance between more than one player.
	* Rearranged some packets and renamed several party related things to be
	more consistent and to make their meanings clearer.

2012-04-27  GoldenKevin  (revision 83)

	* Removed reference to argonms.game in GameCenterPacketProcessor.
	* Fixed disbandment of party when a member is offline.
	* Fixed mastery sometimes causing error 5 to other players in map (and
	giving wrong color based on skill level).
	* Fixed mob item drops can be leeched by anyone. Still need a solution for
	reactor drops.

2012-05-12  GoldenKevin  (revision 84)

	* New method for distributing mob EXP. This finally refactors that huge,
	ugly Mob.giveExp method into more manageable chunks. If a party attacks a
	mob and that mob has another attacker outside the party, the distribution
	makes a bit more sense (before, the party would get the mob's full EXP
	instead of only a share based on how much damage it did). It is somewhat
	more object oriented now, although not as much as I would have liked.
	* Autoban detects when client wants to control a mob that it did not aggro.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.